--- a/.github/workflows/test-windows.yml
+++ b/.github/workflows/test-windows.yml
@@ -20,31 +20,58 @@ jobs:
     
     - name: Fix Windows Files
       run: |
-        echo "=== Fixing Windows Build Files ==="
+        Write-Host "=== Fixing Windows Build Files ===" -ForegroundColor Green
         
         # 1. Create resource.h if missing or fix it
-        echo "#pragma once" > windows/runner/resource.h
-        echo. >> windows/runner/resource.h
-        echo "#define IDI_APP_ICON 101" >> windows/runner/resource.h
-        echo "#define IDR_APPLICATION_MANIFEST 102" >> windows/runner/resource.h
+        $resourceContent = @'
+#pragma once
+
+#define IDI_APP_ICON                    101
+#define IDR_APPLICATION_MANIFEST        102
+'@
+        Set-Content -Path "windows/runner/resource.h" -Value $resourceContent -Encoding ASCII
+        Write-Host "✅ Fixed resource.h" -ForegroundColor Green
         
         # 2. Create runner.rc if missing
-        if not exist windows/runner/runner.rc (
-          echo #include "resource.h" > windows/runner/runner.rc
-          echo. >> windows/runner/runner.rc
-          echo IDI_APP_ICON ICON "resources/app_icon.ico" >> windows/runner/runner.rc
-          echo. >> windows/runner/runner.rc
-          echo IDR_APPLICATION_MANIFEST RT_MANIFEST "runner.exe.manifest" >> windows/runner/runner.rc
-        )
+        if (!(Test-Path "windows/runner/runner.rc")) {
+          $runnerRcContent = @'
+#include "resource.h"
+
+IDI_APP_ICON ICON "resources/app_icon.ico"
+
+IDR_APPLICATION_MANIFEST RT_MANIFEST "runner.exe.manifest"
+'@
+          Set-Content -Path "windows/runner/runner.rc" -Value $runnerRcContent -Encoding ASCII
+          Write-Host "✅ Created runner.rc" -ForegroundColor Green
+        }
         
         # 3. Create resources directory and placeholder icon
-        if not exist windows/runner/resources mkdir windows/runner/resources
-        if not exist windows/runner/resources/app_icon.ico (
-          # Minimal ICO file (1x1 transparent pixel)
-          echo 0x00, 0x00, 0x01, 0x00, 0x01, 0x00, 0x01, 0x01, 0x00, 0x00, 0x01, 0x00, 0x08, 0x00, 0x28, 0x00, 0x00, 0x00, 0x16, 0x00, 0x00, 0x00, 0x28, 0x00, 0x00, 0x00, 0x01, 0x00, 0x00, 0x00, 0x02, 0x00, 0x00, 0x00, 0x01, 0x00, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0xFF, 0xFF, 0xFF, 0x00, 0x00, 0x00, 0x00, 0x00 | Out-File -Encoding byte windows/runner/resources/app_icon.ico
-        )
+        if (!(Test-Path "windows/runner/resources")) {
+          New-Item -ItemType Directory -Path "windows/runner/resources" -Force | Out-Null
+          Write-Host "✅ Created resources directory" -ForegroundColor Green
+        }
         
-        echo "✅ Windows files fixed"
+        if (!(Test-Path "windows/runner/resources/app_icon.ico")) {
+          # Minimal ICO file (1x1 transparent pixel)
+          $iconBytes = @(
+            0x00, 0x00, 0x01, 0x00, 0x01, 0x00, 0x01, 0x01, 
+            0x00, 0x00, 0x01, 0x00, 0x08, 0x00, 0x28, 0x00, 
+            0x00, 0x00, 0x16, 0x00, 0x00, 0x00, 0x28, 0x00, 
+            0x00, 0x00, 0x01, 0x00, 0x00, 0x00, 0x02, 0x00, 
+            0x00, 0x00, 0x01, 0x00, 0x08, 0x00, 0x00, 0x00, 
+            0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 
+            0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 
+            0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0xFF, 0xFF, 
+            0xFF, 0x00, 0x00, 0x00, 0x00, 0x00
+          )
+          [System.IO.File]::WriteAllBytes("windows/runner/resources/app_icon.ico", $iconBytes)
+          Write-Host "✅ Created app_icon.ico" -ForegroundColor Green
+        }
+        
+        Write-Host "=== Verification ===" -ForegroundColor Cyan
+        Write-Host "resource.h exists: $(Test-Path 'windows/runner/resource.h')"
+        Write-Host "runner.rc exists: $(Test-Path 'windows/runner/runner.rc')"
+        Write-Host "app_icon.ico exists: $(Test-Path 'windows/runner/resources/app_icon.ico')"
     
     - name: Install Dependencies
       run: flutter pub get
