--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,28 +21,67 @@ jobs:
     
     - name: Create Missing Windows Files
       run: |
-        # Create required Windows files
-        echo "#pragma once" > windows/runner/resource.h
-        echo "" >> windows/runner/resource.h
-        echo "#define IDI_APP_ICON 101" >> windows/runner/resource.h
-        echo "#define IDR_APPLICATION_MANIFEST 102" >> windows/runner/resource.h
+        Write-Host "=== Creating Windows Build Files ===" -ForegroundColor Green
         
-        if not exist windows/runner/runner.rc (
-          echo #include "resource.h" > windows/runner/runner.rc
-          echo. >> windows/runner/runner.rc
-          echo IDI_APP_ICON ICON "resources/app_icon.ico" >> windows/runner/runner.rc
-          echo. >> windows/runner/runner.rc
-          echo IDR_APPLICATION_MANIFEST RT_MANIFEST "runner.exe.manifest" >> windows/runner/runner.rc
-        )
+        # Create resource.h
+        $resourceContent = @'
+#pragma once
+
+#define IDI_APP_ICON                    101
+#define IDR_APPLICATION_MANIFEST        102
+'@
+        Set-Content -Path "windows/runner/resource.h" -Value $resourceContent -Encoding ASCII
+        Write-Host "✅ Created resource.h" -ForegroundColor Green
         
-        if not exist windows/runner/resources mkdir windows/runner/resources
-        if not exist windows/runner/resources/app_icon.ico (
-          # Create empty file as placeholder
-          break > windows/runner/resources/app_icon.ico
-        )
+        # Create runner.rc if missing
+        if (!(Test-Path "windows/runner/runner.rc")) {
+            $runnerRcContent = @'
+#include "resource.h"
+
+IDI_APP_ICON ICON "resources/app_icon.ico"
+
+IDR_APPLICATION_MANIFEST RT_MANIFEST "runner.exe.manifest"
+'@
+            Set-Content -Path "windows/runner/runner.rc" -Value $runnerRcContent -Encoding ASCII
+            Write-Host "✅ Created runner.rc" -ForegroundColor Green
+        }
+        
+        # Create resources directory if missing
+        if (!(Test-Path "windows/runner/resources")) {
+            New-Item -ItemType Directory -Path "windows/runner/resources" -Force | Out-Null
+            Write-Host "✅ Created resources directory" -ForegroundColor Green
+        }
+        
+        # Create placeholder icon if missing
+        if (!(Test-Path "windows/runner/resources/app_icon.ico")) {
+            # Minimal valid ICO file
+            $iconBytes = @(
+                0x00, 0x00, 0x01, 0x00, 0x01, 0x00, 0x01, 0x01, 
+                0x00, 0x00, 0x01, 0x00, 0x08, 0x00, 0x28, 0x00, 
+                0x00, 0x00, 0x16, 0x00, 0x00, 0x00, 0x28, 0x00, 
+                0x00, 0x00, 0x01, 0x00, 0x00, 0x00, 0x02, 0x00, 
+                0x00, 0x00, 0x01, 0x00, 0x08, 0x00, 0x00, 0x00, 
+                0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 
+                0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 
+                0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0xFF, 0xFF, 
+                0xFF, 0x00, 0x00, 0x00, 0x00, 0x00
+            )
+            [System.IO.File]::WriteAllBytes("windows/runner/resources/app_icon.ico", $iconBytes)
+            Write-Host "✅ Created app_icon.ico" -ForegroundColor Green
+        }
+        
+        Write-Host "=== Verification ===" -ForegroundColor Cyan
+        Get-Content "windows/runner/resource.h"
     
     - name: Install Dependencies
       run: flutter pub get
     
     - name: Build Windows
       run: flutter build windows --release
+    
+    - name: Upload Build Artifact
+      uses: actions/upload-artifact@v4
+      with:
+        name: windows-app
+        path: build/windows/runner/Release/
+        retention-days: 5
