--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -3,8 +3,6 @@ name: Build Windows App
 on:
   push:
     branches: [main]
-  pull_request:
-    branches: [main]
 
 jobs:
   build:
@@ -15,74 +13,25 @@ jobs:
     
     - name: Setup Flutter
       uses: subosito/flutter-action@v2
-      with:
-        channel: 'stable'
-        cache: true
     
-    - name: Fix Windows Files
-      shell: pwsh
+    - name: Ensure Critical Files Exist
       run: |
-        Write-Host "=== Checking and fixing Windows files ===" -ForegroundColor Cyan
+        # Just create the absolutely essential files
+        echo "#pragma once" > windows/runner/resource.h
+        echo "" >> windows/runner/resource.h
+        echo "#define IDI_APP_ICON 101" >> windows/runner/resource.h
+        echo "#define IDR_APPLICATION_MANIFEST 102" >> windows/runner/resource.h
         
-        # 1. Check current files first
-        Write-Host "Current directory structure:" -ForegroundColor Yellow
-        Get-ChildItem -Path "windows" -Recurse -Depth 2 | Select-Object Name, FullName
+        echo "#include \"resource.h\"" > windows/runner/runner.rc
+        echo "" >> windows/runner/runner.rc
+        echo "IDI_APP_ICON ICON \"resources/app_icon.ico\"" >> windows/runner/runner.rc
+        echo "" >> windows/runner/runner.rc
+        echo "IDR_APPLICATION_MANIFEST RT_MANIFEST \"runner.exe.manifest\"" >> windows/runner/runner.rc
         
-        # 2. Create resource.h (overwrite if exists)
-        $resourceContent = @'
-#pragma once
-
-#define IDI_APP_ICON                    101
-#define IDR_APPLICATION_MANIFEST        102
-'@
-        Set-Content -Path "windows/runner/resource.h" -Value $resourceContent -Encoding ASCII
-        Write-Host "✅ Updated resource.h" -ForegroundColor Green
-        
-        # 3. Create runner.rc (overwrite if exists)
-        $runnerRcContent = @'
-#include "resource.h"
-
-IDI_APP_ICON ICON "resources/app_icon.ico"
-
-IDR_APPLICATION_MANIFEST RT_MANIFEST "runner.exe.manifest"
-'@
-        Set-Content -Path "windows/runner/runner.rc" -Value $runnerRcContent -Encoding ASCII
-        Write-Host "✅ Updated runner.rc" -ForegroundColor Green
-        
-        # 4. Create resources directory if it doesn't exist (no error if exists)
-        $resourcesPath = "windows/runner/resources"
-        if (!(Test-Path $resourcesPath)) {
-            New-Item -ItemType Directory -Path $resourcesPath -Force | Out-Null
-            Write-Host "✅ Created resources directory" -ForegroundColor Green
-        } else {
-            Write-Host "✓ Resources directory already exists" -ForegroundColor Yellow
-        }
-        
-        # 5. Create icon if missing (don't overwrite if exists)
-        $iconPath = "$resourcesPath/app_icon.ico"
-        if (!(Test-Path $iconPath)) {
-            # Create minimal valid icon (70 bytes)
-            $iconBytes = [byte[]]@(
-                0x00,0x00,0x01,0x00,0x01,0x00,0x01,0x01,0x00,0x00,0x01,0x00,0x08,0x00,0x28,0x00,
-                0x00,0x00,0x16,0x00,0x00,0x00,0x28,0x00,0x00,0x00,0x01,0x00,0x00,0x00,0x02,0x00,
-                0x00,0x00,0x01,0x00,0x08,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,
-                0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,0xFF,0xFF,
-                0xFF,0x00,0x00,0x00,0x00,0x00
-            )
-            [System.IO.File]::WriteAllBytes($iconPath, $iconBytes)
-            Write-Host "✅ Created app_icon.ico" -ForegroundColor Green
-        } else {
-            Write-Host "✓ app_icon.ico already exists" -ForegroundColor Yellow
-        }
-        
-        Write-Host "=== Verification ===" -ForegroundColor Cyan
-        Write-Host "Files created/verified:" -ForegroundColor Green
-        Write-Host "  • windows/runner/resource.h"
-        Write-Host "  • windows/runner/runner.rc"
-        Write-Host "  • windows/runner/resources/app_icon.ico"
+        echo "Essential files updated"
     
     - name: Install Dependencies
       run: flutter pub get
     
     - name: Build Windows
-      run: flutter build windows --release
+      run: flutter build windows --debug
