--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -19,22 +19,50 @@ jobs:
         channel: 'stable'
         cache: true
     
-    - name: Create Windows Files with Working Icon
+    - name: Create Windows Files
       shell: pwsh
       run: |
-        Write-Host "=== Creating Windows files with guaranteed working icon ===" -ForegroundColor Cyan
-        
-        # 1. Create resource.h
+        # Create minimal required files
         Set-Content -Path "windows/runner/resource.h" -Value "#pragma once`r`n`r`n#define IDI_APP_ICON 101`r`n#define IDR_APPLICATION_MANIFEST 102" -Encoding ASCII
         
-        # 2. Create runner.rc - WITHOUT THE ICON LINE
-        # Let's comment it out or remove it since it's causing issues
-        Set-Content -Path "windows/runner/runner.rc" -Value "#include `"resource.h`"`r`n`r`n// Temporarily disabled: IDI_APP_ICON ICON `"resources/app_icon.ico`"`r`n`r`nIDR_APPLICATION_MANIFEST RT_MANIFEST `"runner.exe.manifest`"" -Encoding ASCII
+        # Create runner.rc with commented icon for now
+        Set-Content -Path "windows/runner/runner.rc" -Value "#include `"resource.h`"`r`n`r`n// Icon temporarily disabled - build works without it`r`n// IDI_APP_ICON ICON `"resources/app_icon.ico`"`r`n`r`nIDR_APPLICATION_MANIFEST RT_MANIFEST `"runner.exe.manifest`"" -Encoding ASCII
         
-        Write-Host "✅ Created files (icon commented out)" -ForegroundColor Green
+        Write-Host "✅ Created Windows build files" -ForegroundColor Green
     
     - name: Install Dependencies
       run: flutter pub get
     
-    - name: Try Debug Build
+    - name: Build Windows (Debug)
       run: flutter build windows --debug
+    
+    - name: Build Windows (Release)
+      run: flutter build windows --release
+    
+    - name: List Build Output
+      run: |
+        Write-Host "=== Build Output Structure ===" -ForegroundColor Cyan
+        Get-ChildItem -Path "build\windows" -Recurse | Format-Table Name, Length, LastWriteTime
+        
+        Write-Host "`n=== Release Build Files ===" -ForegroundColor Green
+        if (Test-Path "build\windows\runner\Release") {
+            Get-ChildItem -Path "build\windows\runner\Release" -Recurse | Format-Table Name, Length
+        }
+    
+    - name: Upload Debug Build Artifact
+      uses: actions/upload-artifact@v4
+      with:
+        name: windows-debug-build
+        path: |
+          build/windows/runner/Debug/
+          build/windows/flutter/Debug/
+        retention-days: 7
+    
+    - name: Upload Release Build Artifact
+      uses: actions/upload-artifact@v4
+      with:
+        name: windows-release-build
+        path: |
+          build/windows/runner/Release/
+          build/windows/flutter/Release/
+        retention-days: 7
