--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -1,4 +1,4 @@
-name: Complete Windows Build
+name: Build Windows App
 
 on:
   push:
@@ -8,85 +8,42 @@ on:
   workflow_dispatch:
 
 jobs:
-  build:
+  build-windows:
     runs-on: windows-latest
     
-    strategy:
-      matrix:
-        build-type: [debug, release]
-        
     steps:
     - uses: actions/checkout@v4
     
     - name: Setup Flutter
       uses: subosito/flutter-action@v2
       with:
-        flutter-version: '3.22.0'
         channel: 'stable'
         cache: true
         
-    - name: Install Dependencies
-      run: |
-        flutter pub get
-        flutter config --enable-windows-desktop
-        
-    - name: Build Windows
-      run: flutter build windows --${{ matrix.build-type }}
+    - name: Install dependencies
+      run: flutter pub get
       
-    - name: Find and Prepare Artifacts
-      shell: pwsh
-      run: |
-        # Create artifacts directory
-        New-Item -ItemType Directory -Force -Path "artifacts"
-        
-        # Try to find the executable in multiple locations
-        $possiblePaths = @(
-            "full-build-output\x64\runner\${{ matrix.build-type }}\english_assessment_app.exe",
-            "build\windows\runner\${{ matrix.build-type }}\english_assessment_app.exe",
-            "full-build-output\runner\${{ matrix.build-type }}\english_assessment_app.exe"
-        )
-        
-        $found = $false
-        foreach ($path in $possiblePaths) {
-            if (Test-Path $path) {
-                Write-Host "Found executable at: $path"
-                # Copy to consistent location
-                Copy-Item -Path $path -Destination "artifacts\english_assessment_app.exe" -Force
-                $found = $true
-                break
-            }
-        }
-        
-        if (-not $found) {
-            Write-Host "Executable not found in standard locations. Searching..."
-            Get-ChildItem -Path . -Filter "english_assessment_app.exe" -Recurse -File | ForEach-Object {
-                Write-Host "Found at: $($_.FullName)"
-                Copy-Item -Path $_.FullName -Destination "artifacts\english_assessment_app.exe" -Force
-            }
-        }
-        
-        # Also copy all DLLs and data files if they exist
-        $dllPath = Split-Path -Path $path -Parent
-        if (Test-Path $dllPath) {
-            Get-ChildItem -Path $dllPath -Include "*.dll", "data" -Recurse | ForEach-Object {
-                $destPath = "artifacts\" + $_.Name
-                Copy-Item -Path $_.FullName -Destination $destPath -Force
-            }
-        }
-        
-    - name: Upload Artifact
+    - name: Build Windows (Debug)
+      run: flutter build windows --debug
+      
+    - name: Upload Windows Artifact (Fixed Path)
       uses: actions/upload-artifact@v4
       with:
-        name: english-assessment-app-${{ matrix.build-type }}
-        path: artifacts/
+        name: english-assessment-app-windows-debug
+        path: full-build-output/x64/runner/Debug/english_assessment_app.exe
         
-    - name: Create ZIP Archive
-      shell: pwsh
-      run: |
-        Compress-Archive -Path "artifacts\*" -DestinationPath "english_assessment_app_${{ matrix.build-type }}.zip" -Force
-        
-    - name: Upload ZIP
+    - name: Upload Entire Debug Folder (Optional)
+      if: success()
       uses: actions/upload-artifact@v4
       with:
-        name: english-assessment-app-${{ matrix.build-type }}-zip
-        path: english_assessment_app_${{ matrix.build-type }}.zip
+        name: windows-debug-full
+        path: full-build-output/x64/runner/Debug/
+        
+    - name: Build Windows (Release)
+      run: flutter build windows --release
+      
+    - name: Upload Release Artifact
+      uses: actions/upload-artifact@v4
+      with:
+        name: english-assessment-app-windows-release
+        path: build/windows/runner/Release/english_assessment_app.exe
